--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,7 @@ git2 = "0.10.1"
 hyper = "0.12.35"
 log = "0.4.8"
 pretty_env_logger = "0.3.1"
+failure = "0.1.5"
+serde_json = "1.0.41"
+serde = { version = "1.0.101", features = ["derive"] }
+regex = "1.3.1"
